# DNZip

./: .gitignore  CHANGES.md  LICENSE  NOTICE  README.md  dnzip.spec  pyproject.toml
dnzip/: __init__.py  __main__.py  constants.py  debug.py  errors.py  reader.py  stream.py  structures.py  utils.py  writer.py
